# cpp-deps

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  Cargo.toml  crates.js  deny.toml  help.html  rust-toolchain.toml  rustfmt.toml  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yaml
cpp_deps/: all.html  enum.CppDepsItem.html  index.html  sidebar-items.js  struct.CppDeps.html  struct.CppDepsAnalyzer.html  struct.CppDepsSrc.html  struct.Error.html
cpp_deps/analyzer/: struct.CppDepsAnalyzer.html
cpp_deps_cli/: all.html  fn.main.html  index.html  sidebar-items.js  type.BoxError.html  type.BoxResult.html
crates/cpp-deps/: Cargo.toml  README.md
crates/cpp-deps-cli/: Cargo.toml  README.md
crates/cpp-deps-cli/src/: main.rs
crates/cpp-deps/benches/: bench.rs
crates/cpp-deps/src/: analyzer.rs  builder.rs  compiler.rs  lib.rs  order.rs  queue.rs  sink.rs  testing.rs  vendor.rs  worker.rs
crates/cpp-deps/src/testing/: corpus.rs
crates/cpp-deps/src/testing/corpus/: dep_text.rs  src_file.rs
crates/p1689/: Cargo.toml  README.md
crates/p1689/benches/: bench.rs
crates/p1689/src/: lib.rs  spec.rs  util.rs  vendor.rs
crates/p1689/src/spec/: r5.rs
crates/p1689/src/spec/r5/: arbitrary.rs  builders.rs  datagen.rs  parsers.rs  proptest.rs  serde.rs  winnow.rs  yoke.rs
crates/p1689/src/spec/r5/datagen/: graph.rs  json.rs
crates/p1689/src/spec/r5/proptest/: arbitrary.rs  strategy.rs
crates/p1689/src/util/: parsers.rs  proptest.rs  winnow.rs
crates/p1689/src/util/proptest/: arbitrary.rs  strategy.rs
crates/p1689/src/util/proptest/strategy/: json.rs  util.rs
crates/p1689/src/util/winnow/: json.rs  util.rs
crates/p1689/tests/: all.rs  common.rs
crates/p1689/tests/corpus/: mod.rs
docs/: NOTES.md
docs/p1689r5/: schema.json
examples/gnu-make/: Makefile.clang  Makefile.gcc  bar.cpp  foo-part1.cpp  foo-part2.cpp  foo.cpp  foo.cppm  main.cpp
examples/gnu-make/foo/: part1.cppm  part2.cppm
p1689/: all.html  index.html  sidebar-items.js
p1689/r5/: enum.ModuleDesc.html  enum.RequiredModuleDescLookupMethod.html  enum.UniqueBy.html  index.html  sidebar-items.js  struct.DepFile.html  struct.DepInfo.html  struct.ModuleDescView.html  struct.ProvidedModuleDesc.html  struct.RequiredModuleDesc.html
p1689/r5/builders/: enum.UniqueBy.html  index.html  sidebar-items.js  struct.DepFile.html  struct.DepInfo.html  struct.ProvidedModuleDesc.html  struct.RequiredModuleDesc.html
p1689/r5/datagen/: constant.CHACHA8RNG_SEED.html  index.html  sidebar-items.js  type.BoxError.html  type.BoxResult.html
p1689/r5/datagen/graph/: index.html  sidebar-items.js  struct.DepFileIterator.html  struct.GraphGenerator.html  struct.GraphGeneratorConfig.html  struct.GraphGeneratorState.html
p1689/r5/datagen/json/: fn.pretty_print_unindented.html  index.html  sidebar-items.js
p1689/r5/parsers/: enum.ErrorKind.html  fn.dep_file.html  index.html  sidebar-items.js  struct.Error.html  struct.ParseStream.html  struct.State.html  type.StateStream.html
p1689/r5/yoke/: index.html  sidebar-items.js  struct.DepInfoNameYoke.html  trait.DepFileYokeExt.html  trait.DepInfoYokeExt.html  type.DepFileCart.html  type.DepFileYoke.html  type.DepInfoYoke.html
p1689/spec/r5/: enum.ModuleDesc.html  enum.RequiredModuleDescLookupMethod.html  enum.UniqueBy.html  struct.DepFile.html  struct.DepInfo.html  struct.ModuleDescView.html  struct.ProvidedModuleDesc.html  struct.RequiredModuleDesc.html
p1689/spec/r5/builders/: enum.UniqueBy.html  index.html  struct.DepFile.html  struct.DepInfo.html  struct.ProvidedModuleDesc.html  struct.RequiredModuleDesc.html
p1689/spec/r5/datagen/: constant.CHACHA8RNG_SEED.html  index.html  type.BoxError.html  type.BoxResult.html
p1689/spec/r5/datagen/graph/: index.html  struct.DepFileIterator.html  struct.GraphGenerator.html  struct.GraphGeneratorConfig.html  struct.GraphGeneratorState.html
p1689/spec/r5/datagen/json/: fn.pretty_print_unindented.html  index.html
p1689/spec/r5/parsers/: enum.ErrorKind.html
p1689/spec/r5/winnow/: fn.dep_file.html
p1689/spec/r5/yoke/: struct.DepInfoNameYoke.html  trait.DepFileYokeExt.html  trait.DepInfoYokeExt.html  type.DepFileCart.html  type.DepFileYoke.html  type.DepInfoYoke.html
p1689/util/parsers/: struct.Error.html  struct.ParseStream.html
p1689/util/winnow/: struct.State.html  type.StateStream.html
search.desc/cpp_deps/: cpp_deps-desc-0-.js
search.desc/cpp_deps_cli/: cpp_deps_cli-desc-0-.js
search.desc/p1689/: p1689-desc-0-.js
src/cpp_deps/: analyzer.rs.html  lib.rs.html  queue.rs.html  vendor.rs.html  worker.rs.html
src/cpp_deps_cli/: main.rs.html
src/p1689/: lib.rs.html  spec.rs.html  util.rs.html  vendor.rs.html
src/p1689/spec/: r5.rs.html
src/p1689/spec/r5/: builders.rs.html  datagen.rs.html  parsers.rs.html  serde.rs.html  winnow.rs.html  yoke.rs.html
src/p1689/spec/r5/datagen/: graph.rs.html  json.rs.html
src/p1689/util/: parsers.rs.html  winnow.rs.html
trait.impl/arbitrary/: trait.Arbitrary.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/hash/: trait.Hash.js
trait.impl/core/iter/traits/collect/: trait.IntoIterator.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/serde/de/: trait.Deserialize.js
trait.impl/serde/ser/: trait.Serialize.js
trait.impl/yoke/yokeable/: trait.Yokeable.js
type.impl/alloc/boxed/: struct.Box.js
type.impl/alloc/string/: struct.String.js
type.impl/alloc/sync/: struct.Arc.js
type.impl/camino/: struct.Utf8Path.js  struct.Utf8PathBuf.js
type.impl/core/result/: enum.Result.js
type.impl/std/: primitive.str.js
type.impl/winnow/stream/: struct.Stateful.js
type.impl/yoke/yoke/: struct.Yoke.js
(+2 files in other folders)
