[workspace]
resolver = "2"
members = [
  "crates/cpp-deps",
  "crates/cpp-deps-cli",
  "crates/p1689",
]

[workspace.package]
license = "Apache-2.0 WITH LLVM-exception"
edition = "2021"

[workspace.dependencies]

[workspace.lints.rust]
warnings = "warn"
future_incompatible = "deny"
let_underscore = "deny"
nonstandard_style = "deny"
rust_2018_compatibility = "deny"
rust_2018_idioms = "deny"
rust_2021_compatibility = "deny"
rust_2024_compatibility = "deny"
unused = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
