[package]
name = "cpp-deps-cli"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
edition = "2021"
repository = "https://github.com/silvanshade/cpp-deps"
description = "A command-line tool for processing p1689 C++ modules dependency files"
readme = "README.md"
categories = ["compilers", "configuration", "development-tools"]
keywords = ["C++", "p1689", "modules", "build", "dependencies"]

[dependencies]
