[package]
name = "cpp-deps"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
edition = "2021"
repository = "https://github.com/silvanshade/cpp-deps"
description = "A library for processing p1689 C++ modules dependency files"
readme = "README.md"
categories = ["compilers", "configuration", "development-tools"]
keywords = ["C++", "p1689", "modules", "build", "dependencies"]

# NOTE: Uncomment for running `cargo depsize`
# [lib]
# crate-type = ["cdylib"]

[[bench]]
name = "bench"
harness = false

[features]
default = []
camino = ["p1689/camino"]
dashmap = ["dep:dashmap"]
memchr = ["p1689/memchr"]
oneshot = ["dep:oneshot"]

[dependencies]
dashmap = { version = "5.5", optional = true, default-features = false }
oneshot = { version = "0.1", optional = true, default-features = false, features = ["std"] }
p1689 = { path = "../p1689", default-features = false, features = ["parsing", "std", "extra_traits"] }
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4.0"
