[package]
name = "cpp-deps"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license = "Apache-2.0 WITH LLVM-exception"
edition = "2021"
repository = "https://github.com/silvanshade/cpp-deps"
description = "A library for processing p1689 C++ modules dependency files"
readme = "README.md"
categories = ["compilers", "configuration", "development-tools"]
keywords = ["C++", "p1689", "modules", "build", "dependencies"]

# NOTE: Uncomment for running `cargo depsize`
# [lib]
# crate-type = ["cdylib"]

# [[bench]]
# name = "bench"
# harness = false

[features]
default = ["async", "camino"]
async = ["futures-core", "futures-sink", "flume/async"]
camino = ["p1689/camino"]
memchr = ["p1689/memchr"]
std = []
verify = []

[dependencies]
cc = { version = "1.0.99", optional = true, default-features = false, features = ["parallel"] }
flume = { version = "0.11.0", default-features = false }
futures-core = { version = "0.3.30", optional = true, default-features = false }
futures-sink = { version = "0.3.30", optional = true, default-features = false }
memmap2 = { version = "0.9", default-features = false }
p1689 = { path = "../p1689", default-features = false, features = ["extra_traits", "parsing", "std", "yoke"] }
yoke = "0.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
futures-executor = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink"] }
itertools = "0.13.0"
proptest = "1.4.0"
tempdir = "0.3.7"
