[package]
name = "p1689"
version = "0.0.0"
authors = ["silvanshade <silvanshade@users.noreply.github.com>"]
license.workspace = true
edition.workspace = true
repository = "https://github.com/silvanshade/cpp-deps"
description = "Data structures for representing p1689 C++ modules dependency files"
readme = "README.md"
categories = ["compilers", "configuration", "development-tools"]
keywords = ["C++", "p1689", "modules", "build", "dependencies"]

[[bench]]
name = "bench"
harness = false
required-features = ["benchmark"]

[features]
default = ["alloc", "std"]
full = ["datagen", "default", "arbitrary", "builders", "deserialize", "extra_traits", "memchr", "monostate", "serde", "serialize", "winnow"]
alloc = []
arbitrary = ["dep:arbitrary", "arbitrary/derive"]
benchmark = ["alloc", "datagen", "deserialize", "std", "winnow"]
builders = []
datagen = ["dep:fake", "dep:petgraph", "dep:rand", "dep:serde_json", "arbitrary", "serde", "serialize"]
debug = [] # ["winnow?/debug"]
deserialize = ["serde?/derive"]
extra_traits = []
memchr = ["dep:memchr"]
monostate = ["dep:monostate"]
serde = ["dep:cfg_eval", "dep:serde", "dep:serde_with", "camino/serde1", "extra_traits", "monostate"]
serialize = ["serde?/derive"]
std = []
winnow = ["dep:winnow", "memchr"]

# # NOTE: Uncomment for running `cargo depsize`
# [lib]
# crate-type = ["cdylib"]

[dependencies]
arbitrary = { version = "1.3", optional = true, default-features = false }
camino = { version = "1.1", default-features = false }
cfg_eval = { version = "0.1", optional = true, default-features = false }
fake = { version = "2.9", optional = true, default-features = false }
memchr = { version = "2.7", optional = true, default-features = false }
monostate = { version = "0.1", optional = true, default-features = false }
petgraph = { version = "0.6", optional = true, default-features = false, features = ["graphmap"] }
rand = { version = "0.8", optional = true, default-features = false}
serde = { version = "1.0", optional = true, default-features = false }
serde_json = { version = "1.0", optional = true, default-features = false, features = ["alloc"] }
serde_with = { version = "3.8", optional = true, default-features = false, features = ["alloc", "macros"] }
winnow = { version = "0.6", optional = true, default-features = false, features = ["std"] }

[dev-dependencies]
arbitrary = { version = "1.3" }
criterion = { version = "0.5", features = ["html_reports"] }
monostate = { version = "0.1", default-features = false }
proptest = { version = "1.4", default-features = false, features = ["std"] }
rand = { version = "0.8", default-features = false}
rand_chacha = { version = "0.3", features = ["simd"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
